--- a/WebChat/Public/index.html
+++ b/WebChat/Public/index.html
@@ -17,7 +17,7 @@
                 <div class="signButtons">
                     <button class="buttons"><a href="Later Pages/Signs/Signup/signup.html">Registrarse</a></button>
                     <div class="signinButtons">
-                        <button class="buttons"><a href="signin.html">Iniciar Sesión</a></button>
+                        <button class="buttons"><a href="Later Pages/Signs/Signin/signin.html">Iniciar Sesión</a></button>
                     </div>
                 </div>
             </div>
